se actualizo la agenda

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a href="#Servicios">Servicios</a>
                 <a href="#Galeria">Galerias</a>
                 <a href="#Contactenos">Contactenos</a>
+                <a href="#agenda">Contactenos</a>
             </nav>
         </div>
     </header>
